[gd_scene load_steps=4 format=3 uid="uid://bw5b248u6k4qr"]

[ext_resource type="Script" uid="uid://dlfeiaarcmpjd" path="res://scenes/ui/message_panel.gd" id="1_odj8t"]
[ext_resource type="Texture2D" uid="uid://mclqiljvkyuc" path="res://assets/ui/panel1.png" id="2_4pa3d"]
[ext_resource type="Theme" uid="uid://cxs7re3oybvmb" path="res://themes/font_theme.tres" id="3_nulsl"]

[node name="MessagePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_odj8t")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_4pa3d")
stretch_mode = 3

[node name="MessageLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 124.0
offset_bottom = 31.0
theme = ExtResource("3_nulsl")
autowrap_mode = 2

[node name="ContinueIndicator" type="Label" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 103.0
offset_top = 28.0
offset_right = 127.0
offset_bottom = 36.0
theme = ExtResource("3_nulsl")
text = "Next"
